@@ -22,229 +22,9 @@
 #    59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             #
 ############################################################################
 
-import os, shutil, string, urllib, sys, progressbar, optparse, urllib2
+import os, sys, optparse, pypt_core
 
-def download_from_web(sUrl, sFile, sSourceDir):
-    """Download the required file from the web
-       The arguments are passed everytime to the function so that,
-       may be in future, we could reuse this function"""
-    bFound = False
-        #errfunc(temp_decode(X))
-    #print "\n", sFile," not available. Downloading from " + sUrl + "!"
-    
-    try:
-        os.chdir(sSourceDir)
-        block_size = 4096
-        i = 0
-        counter = 0
-        temp = urllib2.urlopen(sUrl)
-        headers = temp.info()
-        size = int(headers['Content-Length'])
-        data = open(sFile,'wb')
-        while i < size:
-            data.write (temp.read(block_size))
-            i += block_size
-            counter += 1
-            progressbar.myReportHook(counter, block_size, size)
-        print "\n"
-        data.close()
-        temp.close()
-        
-        #urllib.urlretrieve(sUrl, sFile, reporthook=progressbar.myReportHook)
-        bFound = True
-        
-    except OSError, (errno, strerror):
-        print sSourceDir
-        errfunc(errno, strerror)
-        
-    except urllib2.HTTPError, errstring:
-        errfunc(errstring.code, errstring.msg)
-        
-    except urllib2.URLError, errstring:
-        #We pass error code "1" here becuase URLError
-        # doesn't pass any error code.
-        # URLErrors shouldn't be ignored, hence program termination
-        if errstring.reason.args[0] == 10060:
-            errfunc(errstring.reason.args[0], errstring.reason)
-            
-        #errfunc(1, errstring.reason)
-        #pass
-    
-    except IOError, (errno, strerror):
-        print strerror
-        errfunc(errno, strerror)
-        
-    return bFound
 
-#TODO: walk_tree_copy_debs
-# This might require simplification and optimization.
-# But for now it's doing the job.
-# Need to find a better algorithm, maybe os.walk()                    
-def walk_tree_copy_debs(sRepository, sFile, sSourceDir):
-    """This function checks for a package to see if its already downloaded
-    It can search directories with depths."""
-    #The core algorithm is here for the whole program to function'\n'
-    #It recursively searches a tree/subtree of folders for package files'\n'
-    #like the directory structure of "apt-proxy". If files are found (.deb || .rpm)'\n'
-    #it checks wether they are on the list of packages to be fetched. If yes,'\n\
-    #it copies them. Same goes for flat "apt archives folders" also.'\n'
-    #Else it fetches the package from the net"""
-    bFound = False
-    try:
-        if sRepository is not None:
-            for name in os.listdir(sRepository):
-                path = os.path.join(sRepository, name)
-                if os.path.isdir(path):
-                    walk_tree_copy_debs(path, sFile, sSourceDir)
-                    #walk_tree_copy_debs(path, sFile)
-                elif name.endswith('.deb') or name.endswith('.rpm'):
-                    if name == sFile:
-                        #shutil.copy(path, sSourceDir)
-                        shutil.copy(name, sSourceDir)
-                        bFound = True
-                        break    
-            return bFound
-    except OSError, (errno, strerror):
-        print errno, strerror
-        errfunc(errno, strerror)
-        
-        
-#def errfunc(error_number, error_code, error_string):
-
-def errfunc(errno, errormsg):
-    """We use errfunc to handler errors.
-    There are some error codes (-3 and 13 as of now)
-    which are temporary codes, they happen when there
-    is a temporary resolution failure, for example.
-    For such situations, we can't abort because the
-    uri file might have other hosts also, which might
-    be well accessible.
-    This function does the job of behaving accordingly
-    as per the error codes."""
-    
-    if errno == -3 or errno == 13:
-        #TODO: Find out what these error codes are for
-        # and better document them the next time you find it out.
-        pass
-    elif errno == 407 or errno == 2:
-        # These, I believe are from OSError/IOError exception.
-        # I'll document it as soon as I confirm it.
-        print errormsg
-        sys.exit(errno)
-    elif errno == 504 or errno == 404 or errno == 10060:
-        #TODO: Counter which will inform that some packages weren't fetched.
-        # A counter needs to be implemented which will at the end inform the list of sources which 
-        # failed to be downloaded with the above codes.
-        
-        # 504 is for gateway timeout
-        # On gateway timeouts we can keep trying out becuase
-        # one apt source.list might have different hosts.
-        # 404 is for URL error. Page not found.
-        # THere can be instances where one source is changed but the rest are working.
-        # 10060 is for Operation Time out. There can be multiple reasons for this timeout
-        # Primarily if the host is down or a slow network or abruption, hence not the whole execution should be aborted
-        print "\n", errno, errormsg
-        print "Will still try with other package uris"
-        pass
-    elif errno == 1:
-        # We'll pass error code 1 where ever we want to gracefully exit
-        print errormsg
-        print "Explicit program termination ", errno
-        sys.exit(errno)
-    else:
-        print "Aieee! I don't understand this errorcode ", errno
-        sys.exit(errno)
-    
-def warn(exception_warn):
-    sys.stderr.write(exception_warn)
-
-def report(blockcount, bytesdownloaded, totalbytes):
-    # This isn't implemented yet.
-    # When implemented this would give a progress bar.        
-    sys.stdout.write("\rDownloading %r from %r ... (%r of %r)" % (blockcount, bytesdownloaded, totalbytes,))
-    sys.stdout.write("\rDownloading ... (%r of %r)" % (blockcount, bytesdownloaded,totalbytes,))
-    sys.stdout.flush()
-
-def starter(uri, path, cache, type = 0):
-    """uri - The uri data whill will contain the information
-    path - The path (if any) where the download needs to be done
-    cache - The cache (if any) where we should check before downloading from the net
-    type - type is basically used to identify wether it's a update download or upgrade download"""
-    
-    if type == 1:
-        #XXX: Oh! We're only downloading the update package list database
-        # Package Update database changes almost daily in Debian.
-        # This is at least true for Sid. Hence it doesn't make sense to copy
-        # update packages' database from a cache.
-        
-        if path is None:
-            if os.access("pypt-downloads", os.W_OK) is True:
-                sSourceDir = os.path.abspath("pypt-downloads")
-            else:
-                os.mkdir("pypt-downloads")
-                sSourceDir = os.path.abspath("pypt-downloads")
-        else:
-                sSourceDir = path
-        
-        try:
-            lRawData = open(uri, 'r').readlines()
-        except IOError, (errno, strerror):
-            print errno, strerror
-            errfunc(errno)
-        
-        for each_single_item in lRawData:
-            lSplitData = each_single_item.split(' ') # Split on the basis of ' ' i.e. space
-    
-            # We initialize the variables "sUrl" and "sFile" here.
-            # We also strip the single quote character "'" to get the real data
-            sUrl = string.rstrip(string.lstrip(''.join(lSplitData[0]), chars="'"), chars="'")
-            sFile = string.rstrip(string.lstrip(''.join(lSplitData[1]), chars="'"), chars="'")
-            
-            print "\nDownloading " + sFile + " from " + sUrl + "!"
-            bStatus = download_from_web(sUrl, sFile, sSourceDir)
-            if bStatus == True:
-                 print sFile + " successfully downloaded from " + sUrl + "\n."
-            else:
-                 print sFile + " not downloaded from " + sUrl + ".\n"
-    #sSourceDir = path
-    if type  == 2:
-        if path is None:
-            if os.access("pypt-downloads", os.W_OK) is True:
-                sSourceDir = os.path.abspath("pypt-downloads")
-            else:
-                os.mkdir("pypt-downloads")
-                sSourceDir = os.path.abspath("pypt-downloads")
-        else:
-            sSourceDir = path
-                
-        if cache is None:
-            sRepository = os.path.abspath(os.curdir)
-        else:
-            sRepository = cache
-            
-        try:
-            lRawData = open(uri, 'r').readlines()
-        except IOError, (errno, strerror):
-            print errno, strerror
-            errfunc(errno)
-        
-        for each_single_item in lRawData:
-            lSplitData = each_single_item.split(' ') # Split on the basis of ' ' i.e. space
-    
-            # We initialize the variables "sUrl" and "sFile" here.
-            # We also strip the single quote character "'" to get the real data
-            sUrl = string.rstrip(string.lstrip(''.join(lSplitData[0]), chars="'"), chars="'")
-            sFile = string.rstrip(string.lstrip(''.join(lSplitData[1]), chars="'"), chars="'")
-            bStatus = walk_tree_copy_debs(sRepository, sFile, sSourceDir)
-            if bStatus == True:
-                print sFile + " sccessfully copied from local cache " + sRepository + ".\n"
-            else:
-                bStatus = download_from_web(sUrl, sFile, sSourceDir)
-                if bStatus == True:
-                     print sFile + " successfully downloaded from " + sUrl + "\n."
-                else:
-                     print sFile + " not downloaded from " + sUrl + "and NA in local cache - " + sRepository + ".\n"
-               
 if __name__ == "__main__":
     
     try:
@@ -309,22 +89,15 @@ if __name__ == "__main__":
         #        sRawUris = "pypt-offline-update.dat"
         
             
-        print "pypt-offline %s" % version
-        print "Copyright %s" % copyright
-        #print """\n\nThis program is still in it's very early stage. There can be situations
-        #where things might not work as expected. Please direct all errors, bugs,suggestions
-        #etc to me at rrs@researchut.com\n\n\n"""
+        sys.stdout.write("pypt-offline %s\n" % (version))
+        sys.stdout.write("Copyright %s\n" % (copyright))
         
-        print type(options.set_update)
         if options.set_update:
             if os.getuid() != 0:
                 parser.error("This option requires super-user privileges. Execute as root or use sudo/su")
-            #options.set_update = "pypt-offline-update.dat"
-            #FIXME: More platforms need to be added -- FIXED
-            # We're using linux2, gnu0 and gnukfreebsd5 as the only platforms because these are the only platforms
-            # upon which apt has been ported under Debian.
+                
             if sys.platform == "linux2" or sys.platform == "gnu0" or sys.platform == "gnukfreebsd5":
-                print "Generating database of files that are needed for an update.\n"
+                sys.stdout.write("Generating database of files that are needed for an update.\n")
                 os.chdir(options.set_update)
                 os.system('/usr/bin/apt-get -qq --print-uris update > pypt-offline-update.dat')
             else:
@@ -342,13 +115,13 @@ if __name__ == "__main__":
                 if sys.platform == "linux2" or sys.platform == "gnu0" or sys.platform == "gnukfreebsd5":
                     os.chdir(options.set_upgrade)
                     if options.upgrade_type == "upgrade":
-                        print "Generating database of files that are needed for an upgrade.\n"
+                        sys.stdout.write("Generating database of files that are needed for an upgrade.\n")
                         os.system('/usr/bin/apt-get -qq --print-uris upgrade > pypt-offline-upgrade.data')
                     elif options.upgrade_type == "dist-upgrade":
-                        print "Generating database of files that are needed for an upgrade.\n"
+                        sys.stdout.write("Generating database of files that are needed for an upgrade.\n")
                         os.system('/usr/bin/apt-get -qq --print-uris dist-upgrade > pypt-offline-upgrade.data')
                     elif options.upgrade_type == "dselect-upgrade":
-                        print "Generating database of files that are needed for an upgrade.\n"
+                        sys.stdout.write("Generating database of files that are needed for an upgrade.\n")
                         os.system('/usr/bin/apt-get -qq --print-uris dselect-upgrade > pypt-offline-upgrade.data')
                     else:
                         parser.error("Invalid upgrade argument type selected\nPlease use one of, upgrade/dist-upgrade/dselect-upgrade\n")
@@ -359,27 +132,23 @@ if __name__ == "__main__":
         if options.fetch_update:
             #TODO: Updation
             # Implement below similar code for updation
-            print "Fetching uris which update apt's package database\n"
+            sys.stdout.write("\nFetching uris which update apt's package database\n\n")
             
             # Since we're in fetch_update, the download_type will be non-deb/rpm data
             # 1 is for update packages 
             # 2 is for upgrade packages
             download_type = 1
-            starter(options.fetch_update, options.download_dir, options.cache_dir, download_type)
-            
-            #if sRawUris is None:
-            #    if os.access("pypt-offline-update.dat", os.R_OK) is True:
-            #        sRawUris = "pypt-offline-update.dat"
+            pypt_core.starter(options.fetch_update, options.download_dir, options.cache_dir, download_type)
             
         if options.fetch_upgrade:
-            print "Fetching packages which need upgradation\n"
+            sys.stdout.write("\nFetching packages which need upgradation\n\n")
             
             # Since we're in fetch_update, the download_type will be non-deb/rpm data
             # 1 is for update packages 
             # 2 is for upgrade packages
             download_type = 2
-            starter(options.fetch_upgrade, options.download_dir, options.cache_dir, download_type)
-            
+            pypt_core.starter(options.fetch_upgrade, options.download_dir, options.cache_dir, download_type)
     
     except KeyboardInterrupt:
-        print "\nReceived immediate EXIT signal. Exiting!\n"
+        sys.stderr.write("\nReceived immediate EXIT signal. Exiting!\n")
+        sys.exit(1)
